2007-01-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.12 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.

2007-01-15	Erik Harrison <erikharrison@xfce.org>

	* src/: Moving undo system changes from local tree to Xfce svn, and
	  resuming work there.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* AUTHORS, src/callback.{c,h}, src/file.c, src/menu.c: Merge the
	  support for the new recently-used database, using the GtkRecent
	  functionality, available in GTK+ 2.10 and later, instead of the
	  planned libfrap module.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* src/selector.c(create_file_chooser): Apply patch from Nick Schermer
	  <nick@xfce.org> to set default response in the open/save file dialogs
	  so hitting enter opens/saves the file. Bug #2249.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.
	* src/window.c: Add root warning. Bug #2245.
	* po/mousepad.pot, po/*.po: Merge new strings.
	* po/de.po: Updated german translations.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* === Released 0.2.10 ===
	* NEWS, configure.in.in: Bump version.
	* po/*.po: Update Project-Id-Version.
	* README, NEWS: Place news for Leafpad users as "Switching from
	  Leafpad" into the README file.

# vi:set ts=8 sw=8 noet ai nocindent: