@@ -64,6 +64,43 @@ AC_HELP_STRING([--enable-debug=@<:@no/minimum/yes/full@:>@], [Turn on debugging 
   [], [enable_debug=mp_debug_default])
 AC_MSG_CHECKING([whether to enable debugging support])
 if test x"$enable_debug" = x"full" -o x"$enable_debug" = x"yes"; then
+
+  dnl Check whether the compiler accepts the -errwarn=%all
+  save_CFLAGS="$CFLAGS"
+  CFLAGS="$CFLAGS -errwarn=%all"
+  AC_MSG_CHECKING([whether $CC accepts -errwarn=%all])
+  AC_COMPILE_IFELSE(AC_LANG_SOURCE([int x;]), [
+    AC_MSG_RESULT([yes])
+    PLATFORM_CFLAGS="$PLATFORM_CFLAGS -errwarn=%all"
+  ], [
+    AC_MSG_RESULT([no])
+  ])
+  CFLAGS="$save_CFLAGS"
+
+  dnl Check whether the compiler accepts the -Werror
+  save_CFLAGS="$CFLAGS"
+  CFLAGS="$CFLAGS -Werror"
+  AC_MSG_CHECKING([whether $CC accepts -Werror])
+  AC_COMPILE_IFELSE(AC_LANG_SOURCE([int x;]), [
+    AC_MSG_RESULT([yes])
+    PLATFORM_CFLAGS="$PLATFORM_CFLAGS -Werror"
+  ], [
+    AC_MSG_RESULT([no])
+  ])
+  CFLAGS="$save_CFLAGS"
+
+  dnl Check whether the compiler accepts the -Wall
+  save_CFLAGS="$CFLAGS"
+  CFLAGS="$CFLAGS -Wall"
+  AC_MSG_CHECKING([whether $CC accepts -Wall])
+  AC_COMPILE_IFELSE(AC_LANG_SOURCE([int x;]), [
+    AC_MSG_RESULT([yes])
+    PLATFORM_CFLAGS="$PLATFORM_CFLAGS -Wall"
+  ], [
+    AC_MSG_RESULT([no])
+  ])
+  CFLAGS="$save_CFLAGS"
+
   dnl Check whether the compiler accepts the -fno-strict-aliasing
   dnl switch, as certain packages - like Glib - still don't work
   dnl properly with newer compilers.
@@ -77,9 +114,6 @@ if test x"$enable_debug" = x"full" -o x"$enable_debug" = x"yes"; then
     AC_MSG_RESULT([no])
   ])
   CFLAGS="$save_CFLAGS"
-
-  dnl Make sure we detect possible errors
-  PLATFORM_CFLAGS="$PLATFORM_CFLAGS -Wall"
 
   dnl Paranoia for --enable-debug=full
   if test x"$enable_debug" = x"full"; then
