@@ -1,3 +1,7 @@
+?.?.?
+=====
+- Test for support of -Wall, -Werror and -errwarn=%all. (Bug #2921).
+
 0.2.12
 ======
 - Add support for the new recently-used database, using the GtkRecent
